--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,13 @@
 hs_err_pid*
 
 
+.idea/.name
+.idea/compiler.xml
+.idea/copyright/profiles_settings.xml
+.idea/findbugs-idea.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+.idea/workspace.xml
+comp1110-labtest1.iml
